--- a/public/index.html
+++ b/public/index.html
@@ -36,7 +36,7 @@
         <i class="material-icons mdc-button__icon" aria-hidden="true">close</i>
         <span class="mdc-button__label">Hangup</span>
     </button>
-    <button class="mdc-button mdc-button--raised" id="screenShareBtn">
+    <button class="mdc-button mdc-button--raised" disabled id="screenShareBtn">
         <i class="material-icons mdc-button__icon" aria-hidden="true">screen_share</i>
         <span class="mdc-button__label">Share Screen</span>
     </button>
