--- a/public/index.html
+++ b/public/index.html
@@ -50,8 +50,11 @@
 </div>
 <div id="videos">
     <video id="localVideo" muted autoplay playsinline></video>
-    <video id="remoteVideo" autoplay playsinline></video>
+    <video id="remoteVideo0" autoplay playsinline></video>
+    <video id="remoteVideo1" autoplay playsinline></video>
+    <video id="remoteVideo2" autoplay playsinline></video>
 </div>
+
 <div class="mdc-dialog"
      id="room-dialog"
      role="alertdialog"
