Corrigindo compartilhamento de tela
Co-authored-by: Pedro <garcia.lucas@aluno.unb.br>
Co-authored-by: Ingrid <ingridcarvalhoisc30@gmail.com>
Co-authored-by: Lorenzo <lorenzodavinci@hotmail.com>

--- a/public/index.html
+++ b/public/index.html
@@ -49,10 +49,8 @@
     <span id="currentRoom"></span>
 </div>
 <div id="videos">
-    <video id="localVideo" muted autoplay playsinline></video>
-    <video id="remoteVideo0" autoplay playsinline></video>
-    <video id="remoteVideo1" autoplay playsinline></video>
-    <video id="remoteVideo2" autoplay playsinline></video>
+    <video id="localVideo" autoplay playsinline></video>
+  
 </div>
 
 <div class="mdc-dialog"
