--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html>
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -17,82 +18,89 @@
 
     <link rel="stylesheet" type="text/css" href="main.css">
 </head>
+
 <body>
-<h1>Bem vindo(a) a chamada!</h1>
-<div id="buttons">
-    <button class="mdc-button mdc-button--raised" id="cameraBtn">
-        <i class="material-icons mdc-button__icon" aria-hidden="true">perm_camera_mic</i>
-        <span class="mdc-button__label">Abrir câmera e microfone</span>
-    </button>
-    <button class="mdc-button mdc-button--raised" disabled id="createBtn">
-        <i class="material-icons mdc-button__icon" aria-hidden="true">group_add</i>
-        <span class="mdc-button__label">Criar sala</span>
-    </button>
-    <button class="mdc-button mdc-button--raised" disabled id="joinBtn">
-        <i class="material-icons mdc-button__icon" aria-hidden="true">group</i>
-        <span class="mdc-button__label">Entrar em uma sala</span>
-    </button>
-    <button class="mdc-button mdc-button--raised" disabled id="hangupBtn">
-        <i class="material-icons mdc-button__icon" aria-hidden="true">close</i>
-        <span class="mdc-button__label">Sair</span>
-    </button>
-    <button class="mdc-button mdc-button--raised" disabled id="screenShareBtn">
-        <i class="material-icons mdc-button__icon" aria-hidden="true">screen_share</i>
-        <span class="mdc-button__label">Compartilhar tela</span>
-    </button>
-    <button class="mdc-button mdc-button--raised" id="stopScreenShareBtn" style="display: none;">
-        <i class="material-icons mdc-button__icon" aria-hidden="true">stop_screen_share</i>
-        <span class="mdc-button__label">Parar de compartilhar</span>
-    </button>
-    <button class="mdc-button mdc-button--raised" disabled id="raiseHandBtn">
-        <i class="material-icons mdc-button__icon" aria-hidden="true">hand</i>
-        <span class="mdc-button__label">Levantar a mão</span>
-    </button>
-    
-</div>
-<div>
-    <span id="currentRoom"></span>
-</div>
-<div id="videos">
+    <h1>Bem vindo(a) a chamada!</h1>
+    <div id="buttons">
+        <!-- Abrir a camera e microfone -->
+        <button class="mdc-button mdc-button--raised" id="cameraBtn">
+            <i class="material-icons mdc-button__icon" aria-hidden="true">perm_camera_mic</i>
+            <span class="mdc-button__label">Abrir câmera e microfone</span>
+        </button>
+        <!-- Criar a sala -->
+        <button class="mdc-button mdc-button--raised" disabled id="createBtn">
+            <i class="material-icons mdc-button__icon" aria-hidden="true">group_add</i>
+            <span class="mdc-button__label">Criar sala</span>
+        </button>
+        <!-- Entrar na sala -->
+        <button class="mdc-button mdc-button--raised" disabled id="joinBtn">
+            <i class="material-icons mdc-button__icon" aria-hidden="true">group</i>
+            <span class="mdc-button__label">Entrar em uma sala</span>
+        </button>
+        <!-- Compartilhar tela -->
+        <button class="mdc-button mdc-button--raised" disabled id="screenShareBtn">
+            <i class="material-icons mdc-button__icon" aria-hidden="true">screen_share</i>
+            <span class="mdc-button__label">Compartilhar tela</span>
+        </button>
+        <!-- Parar de compartilhar -->
+        <button class="mdc-button mdc-button--raised" id="stopScreenShareBtn" style="display: none;">
+            <i class="material-icons mdc-button__icon" aria-hidden="true">stop_screen_share</i>
+            <span class="mdc-button__label">Parar de compartilhar</span>
+        </button>
+        <!-- Levantar a mão -->
+        <button class="mdc-button mdc-button--raised" disabled id="raiseHandBtn">
+            <i class="material-icons mdc-button__icon" aria-hidden="true">front_hand</i>
+            <span class="mdc-button__label">Levantar a mão</span>
+        </button>
+        <!-- Abaixar a mão -->
+        <button class="mdc-button mdc-button--raised" id="downHandBtn" style="display: none;">
+            <i class="material-icons mdc-button__icon" aria-hidden="true">close</i>
+            <span class="mdc-button__label">Abaixar a mão</span>
+        </button>
+        <!-- Sair -->
+        <button class="mdc-button mdc-button--raised" disabled id="hangupBtn">
+            <i class="material-icons mdc-button__icon" aria-hidden="true">close</i>
+            <span class="mdc-button__label">Sair</span>
+        </button>
+    </div>
+    <div>
+        <span id="currentRoom"></span>
+    </div>
     <div class="video-container">
-        <video id="localVideo" muted autoplay playsinline></video>
+        <video id="localVideo" autoplay playsinline></video>
         <div id="handEmoji" class="emoji">✋</div>
     </div>
     <div class="video-container">
         <video id="remoteVideo" autoplay playsinline></video>
         <div id="handEmojiRemote" class="emoji">✋</div>
     </div>
-</div>
-<div class="mdc-dialog"
-     id="room-dialog"
-     role="alertdialog"
-     aria-modal="true"
-     aria-labelledby="my-dialog-title"
-     aria-describedby="my-dialog-content">
-    <div class="mdc-dialog__container">
-        <div class="mdc-dialog__surface">
-            <h2 class="mdc-dialog__title" id="my-dialog-title">Entrar na sala</h2>
-            <div class="mdc-dialog__content" id="my-dialog-content">
-                Digite o id da sala:
-                <div class="mdc-text-field">
-                    <input type="text" id="room-id" class="mdc-text-field__input">
-                    <label class="mdc-floating-label" for="my-text-field"></label>
-                    <div class="mdc-line-ripple"></div>
+    <div class="mdc-dialog" id="room-dialog" role="alertdialog" aria-modal="true" aria-labelledby="my-dialog-title"
+        aria-describedby="my-dialog-content">
+        <div class="mdc-dialog__container">
+            <div class="mdc-dialog__surface">
+                <h2 class="mdc-dialog__title" id="my-dialog-title">Entrar na sala</h2>
+                <div class="mdc-dialog__content" id="my-dialog-content">
+                    Digite o id da sala:
+                    <div class="mdc-text-field">
+                        <input type="text" id="room-id" class="mdc-text-field__input">
+                        <label class="mdc-floating-label" for="my-text-field"></label>
+                        <div class="mdc-line-ripple"></div>
+                    </div>
                 </div>
-            </div>
-            <footer class="mdc-dialog__actions">
-                <button type="button" class="mdc-button mdc-dialog__button" data-mdc-dialog-action="no">
-                    <span class="mdc-button__label">Cancel</span>
-                </button>
-                <button id="confirmJoinBtn" type="button" class="mdc-button mdc-dialog__button"
+                <footer class="mdc-dialog__actions">
+                    <button type="button" class="mdc-button mdc-dialog__button" data-mdc-dialog-action="no">
+                        <span class="mdc-button__label">Cancel</span>
+                    </button>
+                    <button id="confirmJoinBtn" type="button" class="mdc-button mdc-dialog__button"
                         data-mdc-dialog-action="yes">
-                    <span class="mdc-button__label">Join</span>
-                </button>
-            </footer>
+                        <span class="mdc-button__label">Join</span>
+                    </button>
+                </footer>
+            </div>
         </div>
+        <div class="mdc-dialog__scrim"></div>
     </div>
-    <div class="mdc-dialog__scrim"></div>
-</div>
-<script src="app.js"></script>
+    <script src="app.js"></script>
 </body>
+
 </html>
