Inclusão da funcionalidade de mutar som
Co-authored: laispa <lais3722@gmail.com>
Co-authored: Lorenzo <lorenzodavinci@hotmail.com>
Co-authored: AlefMemTav <garcia.lucas@aluno.unb.br>

--- a/public/index.html
+++ b/public/index.html
@@ -72,7 +72,7 @@
         <span id="currentRoom"></span>
     </div>
     <div class="video-container">
-        <video id="localVideo" autoplay playsinline></video>
+        <video id="localVideo" muted autoplay playsinline></video>
         <div id="handEmoji" class="emoji">✋</div>
         <div id="muteEmoji" class="emoji">🔇</div>
 
