--- a/public/index.html
+++ b/public/index.html
@@ -48,6 +48,11 @@
         <i class="material-icons mdc-button__icon" aria-hidden="true">hand</i>
         <span class="mdc-button__label">Levantar a mão</span>
     </button>
+    </button>
+    <button class="mdc-button mdc-button--raised" id="muteSelfBtn">
+         <i class="material-icons mdc-button__icon" aria-hidden="true">mic_off</i>
+        <span class="mdc-button__label">Mutar meu microfone</span>
+    </button>
     
 </div>
 <div>
@@ -57,10 +62,14 @@
     <div class="video-container">
         <video id="localVideo" muted autoplay playsinline></video>
         <div id="handEmoji" class="emoji">✋</div>
+        <div id="muteEmoji" class="emoji">🔇</div>
+
     </div>
     <div class="video-container">
         <video id="remoteVideo" autoplay playsinline></video>
         <div id="handEmojiRemote" class="emoji">✋</div>
+        <div id="muteEmojiRemote" class="emoji">🔇</div>
+
     </div>
 </div>
 <div class="mdc-dialog"
