--- a/public/index.html
+++ b/public/index.html
@@ -68,7 +68,7 @@
         <span id="currentRoom"></span>
     </div>
     <div class="video-container">
-        <video id="localVideo" autoplay playsinline></video>
+        <video id="localVideo" muted autoplay playsinline></video>
         <div id="handEmoji" class="emoji">✋</div>
     </div>
     <div class="video-container">
