--- a/public/index.html
+++ b/public/index.html
@@ -28,6 +28,16 @@
             <i class="material-icons mdc-button__icon" aria-hidden="true">perm_camera_mic</i>
             <span class="mdc-button__label">Abrir câmera e microfone</span>
         </button>
+        <!-- Mutar microfone -->
+        <button class="mdc-button mdc-button--raised" disable id="muteAudioBtn">
+            <i class="material-icons mdc-button__icon" aria-hidden="true">mic_off</i>
+            <span class="mdc-button__label">Mutar meu microfone</span>
+        </button>
+        <!-- Ativar microfone -->
+        <button class="mdc-button mdc-button--raised" id="unMuteAudioBtn" style="display: none;">
+            <i class="material-icons mdc-button__icon" aria-hidden="true">mic_on</i>
+            <span class="mdc-button__label">Ativar meu microfone</span>
+        </button>
         <!-- Criar a sala -->
         <button class="mdc-button mdc-button--raised" disabled id="createBtn">
             <i class="material-icons mdc-button__icon" aria-hidden="true">group_add</i>
@@ -58,14 +68,6 @@
             <i class="material-icons mdc-button__icon" aria-hidden="true">close</i>
             <span class="mdc-button__label">Abaixar a mão</span>
         </button>
-        <button class="mdc-button mdc-button--raised" disable id="muteAudioBtn">
-            <i class="material-icons mdc-button__icon" aria-hidden="true">mic_off</i>
-           <span class="mdc-button__label">Mutar meu microfone</span>
-        </button>
-        <button class="mdc-button mdc-button--raised" id="unMuteAudioBtn" style="display: none;">
-            <i class="material-icons mdc-button__icon" aria-hidden="true">mic_on</i>
-           <span class="mdc-button__label">Ativar meu microfone</span>
-        </button>
         <!-- Sair -->
         <button class="mdc-button mdc-button--raised" disabled id="hangupBtn">
             <i class="material-icons mdc-button__icon" aria-hidden="true">close</i>
@@ -75,11 +77,13 @@
     <div>
         <span id="currentRoom"></span>
     </div>
+    <!-- Video local -->
     <div class="video-container">
         <video id="localVideo" muted autoplay playsinline></video>
         <div id="handEmoji" class="emoji">✋</div>
         <div id="muteEmoji" class="emoji">🔇</div>
     </div>
+    <!-- Video remoto -->
     <div class="video-container">
         <video id="remoteVideo" autoplay playsinline></video>
         <div id="handEmojiRemote" class="emoji">✋</div>
