--- a/public/index.html
+++ b/public/index.html
@@ -79,13 +79,13 @@
     </div>
     <!-- Video local -->
     <div class="video-container">
-        <video id="localVideo" muted autoplay playsinline></video>
+        <video id="localVideo" muted autoplay playsinline style="max-height: 500px"></video>
         <div id="handEmoji" class="emoji">✋</div>
         <div id="muteEmoji" class="emoji">🔇</div>
     </div>
     <!-- Video remoto -->
     <div class="video-container">
-        <video id="remoteVideo" autoplay playsinline></video>
+        <video id="remoteVideo" autoplay playsinline style="max-height: 500px"></video>
         <div id="handEmojiRemote" class="emoji">✋</div>
         <div id="muteEmojiRemote" class="emoji">🔇</div>
     </div>
